fixed top border on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -170,4 +170,7 @@ option {
     .topright {
         width: 100%;
     }
+    #content {
+        border: none;
+    }
 }
